--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ font-size: 21px;
     border: 3px solid  #32b9cd;
     border-radius: 10px;
     padding: 10px 40px 10px 40px;
+    text-align: center;
 }
 
 .content{
